--- a/app/src/main/res/layout/activity_testsetting.xml
+++ b/app/src/main/res/layout/activity_testsetting.xml
@@ -49,36 +49,27 @@
             android:layout_width="458dp"
             android:layout_height="214dp"
             android:background="?attr/colorPrimary"
+            android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="@id/guideline7"
             app:layout_constraintStart_toStartOf="@id/guideline7"
-            app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+            app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/update_settings_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffff47"
-            android:gravity="center_horizontal"
-            android:inputType="textMultiLine"
-            android:padding="6dp"
-            android:text="提交"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/guideline7"
-            app:layout_constraintStart_toStartOf="@id/guideline7" />
+            <ImageView
+                android:id="@+id/set_profile_image"
+                android:layout_width="159dp"
+                android:layout_height="162dp"
+                android:layout_marginTop="40dp"
+                android:src="@drawable/head"
+                android:visibility="visible" />
+        </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="360dp"
             app:layout_constraintEnd_toEndOf="@id/guideline7"
             app:layout_constraintStart_toStartOf="@id/guideline7"
-            app:layout_constraintTop_toBottomOf="@id/bkg"
-            tools:layout_marginBottom="43dp">
+            app:layout_constraintTop_toBottomOf="@id/bkg">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -158,17 +149,23 @@
             </LinearLayout>
         </ScrollView>
 
-        <ImageView
-            android:id="@+id/set_profile_image"
-            android:layout_width="159dp"
-            android:layout_height="162dp"
-            android:layout_marginTop="40dp"
-            android:src="@drawable/head"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/update_settings_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffff47"
+            android:gravity="center_horizontal"
+            android:inputType="textMultiLine"
+            android:padding="6dp"
+            android:text="提交"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/guideline7"
+            app:layout_constraintStart_toStartOf="@id/guideline7" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline7"
