--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -31,13 +31,21 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="375dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="65dp"
                     android:orientation="horizontal">
 
+                    <Button
+                        android:id="@+id/favoritebtn"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/nojoin"
+                        tools:freezesText="true" />
+
                     <TextView
                         android:id="@+id/title"
-                        android:layout_width="300dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_marginStart="10dp"
@@ -47,13 +55,6 @@
                         android:text="活動標題"
                         android:textSize="26sp" />
 
-                    <Button
-                        android:id="@+id/favoritebtn"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/nojoin"
-                        tools:freezesText="true" />
                 </LinearLayout>
 
                 <LinearLayout
