--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -39,7 +39,7 @@
                     <TextView
                         android:id="@+id/title"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center|center_horizontal|center_vertical"
                         android:layout_marginStart="30dp"
                         android:layout_marginLeft="30dp"
