--- a/app/src/main/res/layout/activity_personalpage.xml
+++ b/app/src/main/res/layout/activity_personalpage.xml
@@ -194,7 +194,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="395dp"
+            android:layout_height="match_parent"
             android:animateLayoutChanges="true"
             android:background="#e0e0e0"
             android:fillViewport="true">
@@ -214,30 +214,30 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-<!--                <HorizontalScrollView-->
-<!--                    android:layout_width="401dp"-->
-<!--                    android:layout_height="144dp"-->
-<!--                    android:layout_marginLeft="10dp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:layout_marginRight="10dp"-->
-<!--                    android:layout_marginBottom="10dp">-->
+                <!--                <HorizontalScrollView-->
+                <!--                    android:layout_width="401dp"-->
+                <!--                    android:layout_height="144dp"-->
+                <!--                    android:layout_marginLeft="10dp"-->
+                <!--                    android:layout_marginTop="10dp"-->
+                <!--                    android:layout_marginRight="10dp"-->
+                <!--                    android:layout_marginBottom="10dp">-->
 
-<!--                    <LinearLayout-->
-<!--                        android:id="@+id/actHoldLay"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:orientation="vertical">-->
+                <!--                    <LinearLayout-->
+                <!--                        android:id="@+id/actHoldLay"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:orientation="vertical">-->
 
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/actHold"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginBottom="10dp"/>
-<!--                    </LinearLayout>-->
-<!--                </HorizontalScrollView>-->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/actHold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp" />
+                <!--                    </LinearLayout>-->
+                <!--                </HorizontalScrollView>-->
 
                 <TextView
                     android:id="@+id/recordAct"
@@ -256,7 +256,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="10dp" />
 
                 <TextView
                     android:id="@+id/friend"
@@ -276,7 +276,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="10dp" />
 
             </LinearLayout>
         </ScrollView>
